# mcd

./: Cargo.toml  Dockerfile  docker-compose.yml
config.example/: config.json  eula.txt  server.properties
src/: main.rs  minecraft.rs
