[package]
name = "mcd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.43", features = ["backtrace"] }
env_logger = "0.9.0"
futures = "0.3.17"
hex = { version = "0.4.3", features = ["serde"] }
libc = "0.2.101"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.67"
serenity = { version = "0.10.9", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
sha-1 = "0.9.8"
tempfile = "3.2.0"
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
